--- a/SoldierLoadoutOverhaul/Config/XComArmory_Overhaul_Defaults.ini
+++ b/SoldierLoadoutOverhaul/Config/XComArmory_Overhaul_Defaults.ini
@@ -31,4 +31,7 @@
 +IgnoredCategories=eInvSlot_GrenadePocket
 +IgnoredCategories=eInvSlot_AmmoPocket
 
++CategoryOverrides=(Item=SmokeGrenade, Category=grenade)
++CategoryOverrides=(Item=SmokeGrenadeMk2, Category=grenade)
+
 Version=1
